--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-langchain 
-wikipedia 
-langchain-community 
-langchain-openai
-langchain-anthropic
-python-dotenv
+fastapi
+uvicorn
 pydantic
-duckduckgo-search
+python-dotenv
